TODO

20140105
* updated dependencies
* 2014 update

20130609
* fix in .pc.in file

20130509
* small changes

20130404
* updated dependencies

20130403
* updated dependencies

20130113
* updated msvscpp files

20130103
* changes to .gitignore
* 2013 update

20121224
* added .gitignore
* updated msvscpp files

20120919
* updated dependencies

20120904
* updated dependencies

20120625
* updated dependencies

20120507
* email and project site change
* updated man pages

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* Worked on stand-alone version
